routing from ts for edit.

--- a/src/app/student/view/view.component.html
+++ b/src/app/student/view/view.component.html
@@ -17,5 +17,15 @@
         <strong>Age:</strong>
         <p>{{student.age}}</p>
     </div>
+
+    <div>
+        <strong>Age:</strong>
+        <p>{{student.collegeId}}</p>
+    </div>
+
+    <div>
+        <strong>Age:</strong>
+        <p>{{student.departmentId}}</p>
+    </div>
     
 </div>
