--- a/src/app/student/index/index.component.html
+++ b/src/app/student/index/index.component.html
@@ -16,7 +16,8 @@
         <td>{{ student.age }}</td>
         <td>
           <a href="#" [routerLink]="['/student/', student.id, 'view']" class="btn btn-info">View</a>
-          <a href="#" [routerLink]="['/student/', student.id, 'edit']" class="btn btn-primary">Edit</a>
+          <!--a href="#" [routerLink]="['/student/', student.id, 'edit']" class="btn btn-primary">Edit</a-->
+          <button type="button" (click)="editStudent(student.id)" class="btn btn-primary">Edit</button>
           <button type="button" (click)="deleteStudent(student.id)" class="btn btn-danger">Delete</button>
         </td>
       </tr>
