--- a/src/app/student/create/create.component.html
+++ b/src/app/student/create/create.component.html
@@ -30,11 +30,15 @@
 
        <div class="form-group">
             <label for="collegeId">College Id:</label>
-            <input
+           <select
+                class="form-control"
                 formControlName="collegeId"
-                id="collegeId"
-                type="number"
-                class="form-control">
+              >
+                <option value="">Choose College</option>
+                <option *ngFor="let coll of colleges" [ngValue]="coll.id">
+                  {{ coll.name }}
+                </option>
+              </select>
             <div *ngIf="f['collegeId'].touched && f['collegeId'].invalid" class="alert alert-danger">
                 <div *ngIf="f['collegeId'].errors && f['collegeId'].errors['required']">CollegeId is required.</div>
             </div>
