employee.service added

--- a/src/app/employee/view/view.component.html
+++ b/src/app/employee/view/view.component.html
@@ -1,31 +1,31 @@
 <div class="container">
-    <h1>View Student</h1>
+    <h1>View Employee</h1>
    
-    <a href="#" routerLink="/student/index" class="btn btn-primary">Back</a>
+    <a href="#" routerLink="/employee/index" class="btn btn-primary">Back</a>
     
     <div>
         <strong>ID:</strong>
-        <p>{{student.id}}</p>
+        <p>{{employee.id}}</p>
     </div>
     
     <div>
         <strong>Name:</strong>
-        <p>{{student.name}}</p>
+        <p>{{employee.name}}</p>
     </div>
     
     <div>
         <strong>Age:</strong>
-        <p>{{student.age}}</p>
+        <p>{{employee.age}}</p>
     </div>
 
     <div>
         <strong>CollegeId:</strong>
-        <p>{{student.collegeId}}</p>
+        <p>{{employee.collegeId}}</p>
     </div>
 
     <div>
         <strong>DepartmentId:</strong>
-        <p>{{student.departmentId}}</p>
+        <p>{{employee.departmentId}}</p>
     </div>
     
 </div>
