--- a/src/app/employee/view/view.component.html
+++ b/src/app/employee/view/view.component.html
@@ -4,27 +4,32 @@
     <a href="#" routerLink="/employee/index" class="btn btn-primary">Back</a>
     
     <div>
-        <strong>ID:</strong>
+        <strong>ID :</strong>
         <p>{{employee.id}}</p>
     </div>
     
     <div>
-        <strong>Name:</strong>
+        <strong>Name :</strong>
         <p>{{employee.name}}</p>
     </div>
     
     <div>
-        <strong>Age:</strong>
+        <strong>Position :</strong>
+        <p>{{employee.position}}</p>
+    </div>
+
+    <div>
+        <strong>Age :</strong>
         <p>{{employee.age}}</p>
     </div>
 
     <div>
-        <strong>CollegeId:</strong>
+        <strong>CollegeId :</strong>
         <p>{{employee.collegeId}}</p>
     </div>
 
     <div>
-        <strong>DepartmentId:</strong>
+        <strong>DepartmentId :</strong>
         <p>{{employee.departmentId}}</p>
     </div>
     
