--- a/src/app/employee/index/index.component.html
+++ b/src/app/employee/index/index.component.html
@@ -13,7 +13,7 @@
       <tr *ngFor="let employee of employees">
         <td>{{ employee.id }}</td>
         <td>{{ employee.name }}</td>
-        <td>{{ employee.age }}</td>
+        <td>{{ employee.position }}</td>
         <td>
           <a href="#" [routerLink]="['/employee/', employee.id, 'view']" class="btn btn-info">View</a>
           <!--a href="#" [routerLink]="['/employee/', employee.id, 'edit']" class="btn btn-primary">Edit</a-->
