--- a/src/app/student/index/index.component.html
+++ b/src/app/student/index/index.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h1>Student data</h1>
    
-    <a href="#" routerLink="/student/create/" class="btn btn-success">Create New Student</a>
+    <a href="#" routerLink="/student/create/" class="btn btn-success" id="create-student">Create New Student</a>
      
     <table class="table table-bordered">
       <tr>
