--- a/src/app/student/create/create.component.html
+++ b/src/app/student/create/create.component.html
@@ -58,6 +58,6 @@
         </div>
        
    
-        <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Submit</button>
+        <button class="btn btn-primary" id="submit-btn" type="submit" [disabled]="!form.valid">Submit</button>
     </form>
 </div>
