--- a/src/app/student/view/view.component.html
+++ b/src/app/student/view/view.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h1>View Student</h1>
    
-    <a href="#" routerLink="/student/index" class="btn btn-primary">Back</a>
+    <a href="#" routerLink="/student/index" class="btn btn-primary" id="back-button">Back</a>
     
     <div>
         <strong>ID:</strong>
