--- a/src/app/student/view/view.component.html
+++ b/src/app/student/view/view.component.html
@@ -20,12 +20,12 @@
 
     <div>
         <strong>CollegeId:</strong>
-        <p>{{student.collegeId}}</p>
+        <p>{{student.college.name}}</p>
     </div>
 
     <div>
         <strong>DepartmentId:</strong>
-        <p>{{student.departmentId}}</p>
+        <p>{{student.department.name}}</p>
     </div>
     
 </div>
