--- a/src/app/student/create/create.component.html
+++ b/src/app/student/create/create.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h1>Create New Student</h1>
    
-    <a href="#" routerLink="/student/index" class="btn btn-primary">Back</a>
+    <a href="#" routerLink="/student/index" class="btn btn-primary" id="back-button">Back</a>
          
     <form [formGroup]="form" (ngSubmit)="submit()">
    
@@ -30,11 +30,8 @@
 
        <div class="form-group">
             <label for="collegeId">College Id:</label>
-           <select
-                class="form-control"
-                formControlName="collegeId"
-              >
-                <option value="">Choose College</option>
+           <select class="form-control" formControlName="collegeId" (change)="changeCollege($any($event.target).value)">
+                <option value="0">Choose College</option>
                 <option *ngFor="let coll of colleges" [ngValue]="coll.id">
                   {{ coll.name }}
                 </option>
